Poprawki po Krzysztofie

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Witaj na naszym pierwszytm wsp\o\lnym Repo Kurwa! Mada Faka </h1>
+<h1>Witaj na naszym pierwszytm wspolnym Repo Kurwa! Mada Faka </h1>
